--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -172,27 +172,42 @@ main{
     padding: 20px;
 }
 
-.card{
-width: 100%;
-border-radius: 5px 5xp 5px rgb(177, 177, 177);
-}
 .card > img{
+    display: flex;
     width: 200px;
+    height: 200px;
     margin: auto;
-    box-shadow: 5px 5px 5px  #8d8b8b;
     border-radius: 3px 3px 3px;
+    text-align: center;
+    justify-content: center;
+    text-align: center;
+    padding: 20px;
 }
-.card > .desc{
-    color: #000;
-    font-size: 15px;
-    padding: 10px;
-    margin: auto;
+
+.card{
+    width: 500px;
+    box-shadow: 5px 5px 5px  #8d8b8b;
 }
+
 .price{
-    font-size: 30px;
+    font-size: 50px;
     padding-right: 5px;
+
+}
+.desc{
+    display: flex;
+    flex-wrap: nowrap;
+    width: 500px;
+    padding: 15px;
+    text-align: center;
+    font-size: 25px;
+    word-wrap: break-word;
+}
+
+.title{
+    text-align: center;
 }
 
 footer{
-    position: fixed;
+   
 }
